creating general brand card

--- a/src/pages/brandDetails/modelDetails.css
+++ b/src/pages/brandDetails/modelDetails.css
@@ -1,5 +1,5 @@
 @import '../../Card/section-header.css'; 
-
+@import '../../Card/general-brand-card.css';
 
 .model-details {
     padding: 20px;
@@ -8,56 +8,6 @@
 }
 
 
-.model-grid2 {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-}
-
-.model-card2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    background-color: white;
-    border-radius: 8px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-decoration: none; 
-    color: inherit;
-}
-
-.model-image {
-    width: 60%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
-.model-name2 {
-    font-size: 1.1rem;
-    color: #000000;
-    position: relative;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none
-}
-
-.model-name2::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: -3px;
-    width: 0;
-    height: 2px;
-    background-color: red;
-    transition: width 0.3s ease, left 0.3s ease;
-}
-
-.model-card2:hover .model-name2::after {
-    width: 100%;
-    left: 0;
-}
-
 
 @media (max-width: 768px) {
   .model-details {
@@ -65,32 +15,4 @@
     padding: 0;
   }
 
-  .model-title {
-    font-size: 20px;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .title-underline2 {
-    width: 100%;
-    margin: 0 auto 20px auto;
-  }
-
-  .model-grid2 {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 12px;
-  }
-
-  .model-card2 {
-    padding: 8px;
-  }
-
-  .model-image {
-    width: 80%;
-  }
-
-  .model-name2 {
-    font-size: 1rem;
-    padding: 8px;
-  }
 }
