--- a/src/pages/brandDetails/brandDetails.css
+++ b/src/pages/brandDetails/brandDetails.css
@@ -1,84 +1,24 @@
-@import '../../Card/section-header.css'; 
+@import '../../Card/section-header.css';
+@import '../../Card/general-brand-card.css';
 
 
 .brand-details {
   padding: 20px;
   text-align: center;
   margin: 40px 180px;
+  box-sizing: border-box;
 }
 
-.model-grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
+.model-grid{
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px;
-}
-
-.model-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-  background-color: white;
-  border-radius: 8px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  text-decoration: none;
-  color: inherit;
-}
-
-.model-image {
-  width: 60%;
-  height: auto;
-  border-radius: 8px;
-  margin-bottom: 10px;
-}
-
-.model-name2 {
-  font-size: 1.1rem;
-  color: #000000;
-  position: relative;
-  text-decoration: none;
-  padding: 10px;
-}
-
-.model-link {
-  text-decoration: none;
-  color: inherit;
+  padding: 30px 0;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
-  .brand-details {
-    margin: 40px 15px;
-    padding: 0;
-  }
-
-  .brand-title {
-    font-size: 20px;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-
-  .title-underline3 {
-    width: 100%;
-    margin: 0 auto 20px auto;
-  }
-
-  .model-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
-  }
-
-  .model-card {
-    padding: 8px;
-  }
-
-  .model-image {
-    width: 80%;
-  }
-
-  .model-name2 {
-    font-size: 1rem;
-    padding: 8px;
-  }
+    .brand-details {
+        margin: 40px 15px;
+        padding: 0;
+    }
 }
