--- a/src/pages/brand/brand.css
+++ b/src/pages/brand/brand.css
@@ -3,15 +3,21 @@
 .container-brand {
   padding: 20px;
   text-align: center;
-  margin: 40px 180px;
+  margin: 40px auto;
+  max-width: 1200px;
 }
 
 .categories-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  margin-right: 180px;
-  padding: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 10px;
+  margin: 0 auto;
 }
 
+@media screen and (max-width: 768px) {
+  .categories-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
