--- a/src/pages/accessories/accessoryDetailPage.css
+++ b/src/pages/accessories/accessoryDetailPage.css
@@ -49,8 +49,9 @@
   min-height: 50vh;
   padding: 20px;
   background-color: #f4f9fb;
-  margin-left: 100px;
+  margin: 0 auto;
   padding-top: 70px;
+  max-width: 1200px;
 }
 
 .product-images {
@@ -58,11 +59,10 @@
   align-items: flex-start;
   gap: 15px;
   flex-direction: row-reverse;
-  
 }
 
 .main-image {
-  width: 476px; 
+  max-width: 100%;
   height: 424px;
   border-radius: 10px;
 }
@@ -73,7 +73,6 @@
   flex-direction: column;
   margin-top: 10px;
   align-items: flex-start;
-  
 }
 
 .thumbnail-image {
@@ -83,7 +82,6 @@
   cursor: pointer;
   transition: transform 0.3s ease;
   border: 1px solid #f7dcd0;
-  
 }
 
 .thumbnail-image:hover {
@@ -165,9 +163,9 @@
 
 .error-message2 {
   text-align: center;
-  margin-top: 50px; 
+  margin-top: 50px;
   font-size: 18px;
-  color: red; 
+  color: red;
 }
 
 @media (max-width: 768px) {
@@ -192,6 +190,7 @@
     align-items: center;
     margin-left: 0;
     padding-top: 20px;
+    width: 100%;
   }
 
   .product-images {
@@ -203,13 +202,15 @@
     width: 100%;
     max-width: 320px;
     height: auto;
+    object-fit: contain;
   }
 
   .thumbnail-images {
-    flex-direction: row;
+   flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 10px;
+    gap: 10px;
   }
 
   .thumbnail-image {
@@ -218,15 +219,22 @@
   }
 
   .product-info {
-    padding: 0;
+     padding: 0;
     max-width: 100%;
     margin-top: 20px;
     align-items: center;
+    width: 100%; 
+    box-sizing: border-box;
   }
 
   .product-title {
     font-size: 1.25rem;
     text-align: center;
+  }
+
+  .product-details {
+    align-items: center;
+    width: 100%; /* Добави това */
   }
 
   .product-description,
@@ -238,7 +246,7 @@
   .add-to-cart {
     flex-direction: column;
     gap: 10px;
-    width: 100%;
+    width: 100%; 
     align-items: center;
   }
 
