--- a/src/pages/accessories/accessoryDetails.css
+++ b/src/pages/accessories/accessoryDetails.css
@@ -3,7 +3,8 @@
 .accessories-page {
   padding: 20px;
   text-align: center;
-  margin: 40px 180px;
+  margin: 40px auto;
+  max-width: 1200px;
 }
 
 
@@ -72,6 +73,14 @@
 
 .popup-button:hover {
     background-color: #0056b3;
+}
+
+.parts-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 10px;
+  margin: 0 auto;
 }
   
 
