--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -1,7 +1,8 @@
 .cart-container {
   padding: 20px;
   text-align: center;
-  margin: 40px 180px;
+  margin: 40px auto;
+  max-width: 1200px;
 }
 
 
@@ -9,8 +10,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 97%;
-  margin-left: auto;
+  width: 100%;
+  
 }
 
 .cart-item2 {
