--- a/src/pages/partsSearch/PartsSearch.css
+++ b/src/pages/partsSearch/PartsSearch.css
@@ -1,7 +1,8 @@
 .parts-search-container {
   width: 90%;
-  margin: 40px 200px;
+  margin: 40px auto;
   padding-top: 80px;
+  max-width: 1200px;
 }
 
 .header-section2 {
@@ -9,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 5px;
-  margin-right: 200px;
+ 
 }
 
 .title-parts-search2 {
@@ -39,7 +40,7 @@
   height: 2px;
   background-color: #f39c12;
   margin-bottom: 20px;
-  margin-right: 200px;
+
 }
 
 .search-form {
