--- a/src/Card/product.css
+++ b/src/Card/product.css
@@ -46,10 +46,8 @@
   font-size: 1.1rem;
   color: #333;
   margin: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; 
-  max-width: 150px;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 .product-price2 {
