--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -47,14 +47,11 @@
 }
 
 .nav-links li a:hover {
-    color: #ffc107;
+    color: f39c12;
     text-shadow: 3px 3px 8px rgba(255, 193, 7, 0.6);
     transform: skew(-10deg) scale(1.05);
 }
 
-.nav-links li a:hover {
-    color: yellow;
-}
 
 .btn {
     display: flex;
@@ -619,15 +616,24 @@
     }
 
     .dropdown-menu {
+        position: fixed; 
+        right: 10px;    
+        left: auto;     
+        top: 70px;      
         width: calc(100% - 20px); 
-        left: 10px; 
-        right: 10px; 
+        max-width: 100px; 
+        transform: none; 
         box-sizing: border-box; 
+        z-index: 1000;
     }
 
     .cart-dropdown {
-        right: auto; 
-        left: 50%; 
-        transform: translateX(-50%); 
+        right: 0;
+        left: auto;
+        transform: none;
+    }
+
+    .view-cart-btn {
+        width: 100%;
     }
 }
