--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -118,13 +118,17 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
     min-width: 200px;
     z-index: 1000; 
-
-    
     opacity: 0;
     visibility: hidden;
     transform: translateY(10px); 
     transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
     padding: 10px; 
+}
+
+.dropdown-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 
